update readme for usage and results
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@28144 a97e2381-89e5-4abb-bab3-167db6db766c